# cppwork

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
src/: main.cpp
